tests/fixtures/negative/style/UnnecessaryInheritance.kt
package fixtures.negative.style

open class Base

class Foo : Base()
